--- a/main.css
+++ b/main.css
@@ -11,19 +11,19 @@
 }
 
 .jumbotron {
-  background-image:url('http://goo.gl/04j7Nn');
-  height: 500px;
+  background-image:url('buckeyes.png');
+  height: 760px;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .jumbotron .container {
   position: relative;
-  top:100px;
+  top: 40px;
 }
 
 .jumbotron h1 {
-  color: #fff;
+  color: yellow;
   font-size: 48px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
