--- a/styles.css
+++ b/styles.css
@@ -1,91 +1,100 @@
+/* custom font for name on the top right */
 @font-face {
   font-family: "BlackJack";
   src: url(black_jack.ttf) format("truetype");
 }
-h1 { 
+
+/* ================ Header Part ================*/
+#name { 
+  position: relative;
+  float: left;
+  left: 45px;
+  top: 12px;
   font-family: "BlackJack", sans-serif;
+  font-size: 30px;
+  color: #03151C;
 }
 
-#header{
+#name a {
+  text-decoration: none;
+}
+
+#navbar li {
+  display: inline;
+}
+
+/* fixed header on the top */
+#header {
   width: 100%;
   height: 65px;
   text-transform: uppercase;
   position: fixed;
   z-index: 2;
   background-color: white;
-  font-family: helvetica, sans-serif;
-}
-
-#navbar {
-  height: 50px;
-  margin-top: 14px;
-}
-
-#name a {
-  font-family: "BlackJack";
-  font-size: 30px;
-  text-decoration: none;
-  color: #03151C;
-}
-
-#header #navbar #name, ul{
-  display: inline;
-}
-
-#header #navbar {
-  text-align: center;
-  font-size: 18px;
-  width: 100%;
 }
 
 #navbar ul {
-  margin-left: 800px;
+  position: relative;
+  float: right;
+  top: 20px;
+  right: 25px;
 }
 
-#navbar li {
-  margin: 1px;
-  padding-right: 10px;
-  padding-left: 2px;
-  display: inline; 
+#navbar ul li {
+  padding-left: 12px;
+  padding-right: 5px;
+  border-left: 1px solid grey;
+  font-size: 17px;
+  color: #03151C;
 }
 
 #header #navbar li a {
-
-  color: #03151C;
   text-decoration: none;
 }
 
+.clear {
+  clear: both;
+}
 
-
-
-
-
-
+/* ===================Main Body================*/
 
 .jumbotron {
-
   height: 500px;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.jumbotron .container {
   position: relative;
-  top: 40px;
 }
 
-.jumbotron h1 {
-  color: yellow;
-  font-size: 48px;  
+.jumbotron h1, .jumbotron p {
+  text-align: center;
+  font-size: 36px;  
   font-family: 'Shift', sans-serif;
   font-weight: bold;
 }
 
 .jumbotron p {
   font-size: 20px;
-  color: #fff;
 }
 
+.jumbotron .left {
+  position: relative;
+  width: 50%;
+  float: left;
+}
+
+.jumbotron .right {
+  position: relative;
+  width: 50%;
+  float: left;
+}
+
+.whiteBack {
+  background-color: white;
+}
+
+#contact {
+  height: 150px;
+}
+
+/* =============================================*/
 #footer {
   width: 100%;
   height: 135px;
@@ -94,7 +103,7 @@ h1 {
 }
 
 #copyright {
-  background-color: black;
+  background-color: #1A6073;
   width: 100%;
   height: 45px;
 }
@@ -102,17 +111,7 @@ h1 {
 #copyright p {
   text-align: center;
   font-size: 14px;
-  margin-top: 30px;
+  position: relative;
+  top: 10px;
   color: #A1C9C7;
-}
-
-#sidelist li {
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-#info {
-  background-color: blue;
-  width: 100%;
-  height: 600px;
 }
