--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
-/* custom font for name on the top right */
+/* custom font */
 @font-face {
   font-family: "BlackJack";
   src: url(black_jack.ttf) format("truetype");
 }
 
+@font-face {
+  font-family: "CabinRegular";
+  src: url(Cabin-Regular.otf) format("opentype");
+}
+
+/* ===========navbar and top-container =============*/
 .navbar-header #name {
   font-family: "BlackJack", sans-serif;
   font-size: 35px;
@@ -12,22 +18,97 @@
   float: left;
 }
 
-.collapse .nav {
+#topContainer {
+  background-image: url("images/background-2.jpg");
+  width: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+/* ================================================ */
+
+#profile-pic img {
+  border-radius: 125px;
+  position: relative;
+  top: 35px;
+  left: 50px;
+}
+
+#experience .container .row h2, #experience .container .row p {
+  width: 500px;
+}
+
+#experience .container .midrow p {
+  font-size: 17px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+
+/* ====================common effect================ */
+
+body {
+  font-family: "CabinRegular", sans-serif;
+  -webkit-user-select: none; /* Webkit */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 10 */
+  /* Currently not supported in Opera but will be soon */
+  -o-user-select: none;
+  user-select: none;
+}
+
+/* set sub-title font size */
+.jumbotron .subtitle {
+  font-size: 35px;
+}
+
+.toprow {
+  height: 105px;
+  border-bottom: 1px solid #7DBFC9;
+  padding-bottom: 5px;
+  text-align: center;
+}
+
+.jumbotron .bottomline {
+   border-bottom: 1px solid #7DBFC9;
+   padding-bottom: 25px;
+}
+
+.jumbotron .container h1 {
+  color: #284870; 
+}
+
+.jumbotron {
+  height: auto;
+}
+
+.background-white {
+  background-color: white;
+}
+
+.float-right {
   position: relative;
   float: right;
 }
 
-#topContainer {
-  background-image: url("background-2.jpg");
-  height: 800px;
-  width: 100%;
-  background-size: cover;
-}
-
-.jumbotron {
-  height: 1200px;
+.text-center {
   text-align: center;
 }
+
+.text-left {
+  text-align: left;
+}
+
+
+/* ====================footer======================== */
 
 .footer {
   height: 65px;
@@ -41,142 +122,3 @@
   top: 25px;
   font-weight: bold;
 }
-
-.background-white {
-  background-color: white;
-}
-
-#profile .container #hhh{
-  margin: auto;
-  width   : 200px;
-  height  : 50px;   
-  position: relative;
-  z-index : 1;
-}
-
-#profile .container #hhh:before{
-  content : "";
-  position: absolute;
-  left    : 0;
-  bottom  : 0;
-  height  : 1px;
-  width   : 250%;  
-  border-bottom:1px solid grey;
-}
-
-#profile {
-  height: auto;
-}
-
-/* ================ Header Part ================*/
-/*
-#name { 
-  position: relative;
-  float: left;
-  left: 45px;
-  top: 12px;
-  font-family: "BlackJack", sans-serif;
-  font-size: 30px;
-  color: #03151C;
-}
-
-#name a {
-  text-decoration: none;
-}
-
-#navbar li {
-  display: inline;
-}
-
-/* fixed header on the top 
-#header {
-  width: 100%;
-  height: 65px;
-  text-transform: uppercase;
-  position: fixed;
-  z-index: 2;
-  background-color: white;
-}
-
-#navbar ul {
-  position: relative;
-  float: right;
-  top: 20px;
-  right: 25px;
-}
-
-#navbar ul li {
-  padding-left: 12px;
-  padding-right: 5px;
-  border-left: 1px solid grey;
-  font-size: 17px;
-  color: #03151C;
-}
-
-#header #navbar li a {
-  text-decoration: none;
-}
-
-.clear {
-  clear: both;
-}
-
-/* ===================Main Body================
-
-.jumbotron {
-  height: 500px;
-  position: relative;
-}
-
-.jumbotron h1, .jumbotron p {
-  text-align: center;
-  font-size: 36px;  
-  font-family: 'Shift', sans-serif;
-  font-weight: bold;
-}
-
-.jumbotron p {
-  font-size: 20px;
-}
-
-.jumbotron .left {
-  position: relative;
-  width: 50%;
-  float: left;
-}
-
-.jumbotron .right {
-  position: relative;
-  width: 50%;
-  float: right;
-}
-
-
-
-#contact {
-  height: 150px;
-}
-
-/* =============================================
-#footer {
-  width: 100%;
-  height: 135px;
-  background-color: black;
-  color: grey;
-}
-
-#copyright {
-  background-color: #1A6073;
-  width: 100%;
-  height: 45px;
-}
-
-#copyright p {
-  text-align: center;
-  font-size: 14px;
-  position: relative;
-  top: 10px;
-  color: #A1C9C7;
-}
-
-*/
